[package]
name = "rboehm"
version = "0.1.0"
authors = ["Jacob Hughes <jh@jakehughes.uk>"]
edition = "2018"

[workspace]
members = ["boehm", "trace_derive"]

[features]
# Enable this feature to turn on additional GC optimizations that are only
# possible with the rustc_boehm fork of the compiler.
rustc_boehm = []

# Enable various GC based statistics. Stats are disabled by default as they have
# a run-time cost and are expected to only be used for profiling purposes.
gc_stats = []

# Use boehm as a backend
use_boehm = ["boehm"]

[dependencies]
libc = "*"
boehm = { path = "boehm", optional = true }
trace_derive = { path = "trace_derive" }

[build-dependencies]
rerun_except = "0.1"
num_cpus = "1.12"
which = "4.0"
