[package]
name = "libgc"
version = "0.1.0"
authors = ["Jacob Hughes <jh@jakehughes.uk>"]
edition = "2018"

[features]
# Enable this feature to turn on additional GC optimizations that are only
# possible with the rustgc fork of the compiler.
rustgc = []

# Enable various GC based statistics. Stats are disabled by default as they have
# a run-time cost and are expected to only be used for profiling purposes.
gc_stats = []

[dependencies]
libc = "*"
libgc_internal = { git = "https://github.com/softdevteam/libgc_internal" }

[build-dependencies]
rerun_except = "0.1"
num_cpus = "1.12"
which = "4.0"
